--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button class="button" id="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.automation.DevOpsAssignment.AccountOverviewTest" hash-for-method="verifyAccountOverviewHeading">verifyAccountOverviewHeading</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -139,6 +153,26 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.automation.DevOpsAssignment.AccountOverviewTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyAccountOverviewHeading">
+                  </a> <!-- verifyAccountOverviewHeading -->
+                  <span class="method-name">verifyAccountOverviewHeading</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [Account Overview] but found [Accounts Overview]
+	at com.automation.DevOpsAssignment.AccountOverviewTest.verifyAccountOverviewHeading(AccountOverviewTest.java:54)
+	at java.util.ArrayList.forEach(ArrayList.java:1259)
+... Removed 33 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -252,32 +286,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyUserRegistration')
-data.setCell(0, 2, 'com.automation.DevOpsAssignment.RegistrationTest')
-data.setCell(0, 3, 13524);
+data.setCell(0, 1, 'createNewAccount')
+data.setCell(0, 2, 'com.automation.DevOpsAssignment.UserAccountTest')
+data.setCell(0, 3, 33052);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createNewAccount')
-data.setCell(1, 2, 'com.automation.DevOpsAssignment.UserAccountTest')
-data.setCell(1, 3, 8828);
+data.setCell(1, 1, 'verifyUserRegistration')
+data.setCell(1, 2, 'com.automation.DevOpsAssignment.RegistrationTest')
+data.setCell(1, 3, 12121);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'verifyAccountOverview')
 data.setCell(2, 2, 'com.automation.DevOpsAssignment.AccountOverviewTest')
-data.setCell(2, 3, 6516);
+data.setCell(2, 3, 6566);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyTableDataAndPrintOnConsole')
-data.setCell(3, 2, 'com.automation.DevOpsAssignment.AccountOverviewTest')
-data.setCell(3, 3, 5360);
+data.setCell(3, 1, 'verifyAccountServicesList')
+data.setCell(3, 2, 'com.automation.DevOpsAssignment.UserAccountTest')
+data.setCell(3, 3, 5263);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAccountServicesList')
-data.setCell(4, 2, 'com.automation.DevOpsAssignment.UserAccountTest')
-data.setCell(4, 3, 5295);
+data.setCell(4, 1, 'verifyTableDataAndPrintOnConsole')
+data.setCell(4, 2, 'com.automation.DevOpsAssignment.AccountOverviewTest')
+data.setCell(4, 3, 5259);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verifyAccountOverviewHeading')
+data.setCell(5, 2, 'com.automation.DevOpsAssignment.AccountOverviewTest')
+data.setCell(5, 3, 5051);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 39 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -332,52 +370,58 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">launchApplication</span>
-                <span class="method-start">2003 ms</span>
+                <span class="method-start">4335 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">initilizePages</span>
-                <span class="method-start">7321 ms</span>
+                <span class="method-start">10333 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifyUserRegistration</span>
-                <span class="method-start">7362 ms</span>
+                <span class="method-start">10371 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.DevOpsAssignment.UserAccountTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initilizePages</span>
-                <span class="method-start">20949 ms</span>
+                <span class="method-start">22556 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">createNewAccount</span>
-                <span class="method-start">20956 ms</span>
+                <span class="method-start">22562 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAccountServicesList</span>
-                <span class="method-start">29787 ms</span>
+                <span class="method-start">55617 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.DevOpsAssignment.AccountOverviewTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initializePages</span>
-                <span class="method-start">35084 ms</span>
+                <span class="method-start">60881 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifyAccountOverview</span>
-                <span class="method-start">35086 ms</span>
+                <span class="method-start">60883 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">verifyAccountOverviewHeading</span>
+                <span class="method-start">67451 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyTableDataAndPrintOnConsole</span>
-                <span class="method-start">41603 ms</span>
+                <span class="method-start">72506 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.DevOpsAssignment.RegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">killSession</span>
-                <span class="method-start">51994 ms</span>
+                <span class="method-start">82798 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
