--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6172a4">  <td>21/03/28 11:39:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.createNewAccount()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">createNewAccount</td> 
+<tr bgcolor="6172a4">  <td>21/03/29 09:17:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.createNewAccount()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">createNewAccount</td> 
   <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="a5e5c6">  <td>21/03/28 11:40:01</td>   <td>14129</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountOverviewTest.initializePages()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">&gt;&gt;initializePages</td> 
+<tr bgcolor="a5e5c6">  <td>21/03/29 09:18:22</td>   <td>38320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountOverviewTest.initializePages()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">&gt;&gt;initializePages</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="ddaeda">  <td>21/03/28 11:39:34</td>   <td>-13635</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;initilizePages</td> 
+<tr bgcolor="ddaeda">  <td>21/03/29 09:17:32</td>   <td>-12229</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;initilizePages</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>21/03/28 11:39:47</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserAccountTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">&gt;&gt;initilizePages</td> 
+<tr bgcolor="6172a4">  <td>21/03/29 09:17:44</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserAccountTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">&gt;&gt;initilizePages</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>21/03/28 11:40:18</td>   <td>31039</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&lt;&lt;killSession</td> 
+<tr bgcolor="98b989">  <td>21/03/29 09:18:44</td>   <td>60236</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&lt;&lt;killSession</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>21/03/28 11:39:28</td>   <td>-18953</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;launchApplication</td> 
+<tr bgcolor="98b989">  <td>21/03/29 09:17:26</td>   <td>-18227</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;launchApplication</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>21/03/28 11:39:26</td>   <td>-20950</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="98b989">  <td>21/03/29 09:17:21</td>   <td>-22557</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="a5e5c6">  <td>21/03/28 11:40:01</td>   <td>14130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyAccountOverview()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyAccountOverview</td> 
+<tr bgcolor="a5e5c6">  <td>21/03/29 09:18:22</td>   <td>38321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyAccountOverview()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyAccountOverview</td> 
   <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>21/03/28 11:39:56</td>   <td>8831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.verifyAccountServicesList()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">verifyAccountServicesList</td> 
+<tr bgcolor="a5e5c6">  <td>21/03/29 09:18:29</td>   <td>44889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyAccountOverviewHeading()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyAccountOverviewHeading</td> 
   <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="a5e5c6">  <td>21/03/28 11:40:08</td>   <td>20647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyTableDataAndPrintOnConsole()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyTableDataAndPrintOnConsole</td> 
+<tr bgcolor="6172a4">  <td>21/03/29 09:18:17</td>   <td>33055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.verifyAccountServicesList()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">verifyAccountServicesList</td> 
   <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="ddaeda">  <td>21/03/28 11:39:34</td>   <td>-13594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">verifyUserRegistration</td> 
+<tr bgcolor="a5e5c6">  <td>21/03/29 09:18:34</td>   <td>49944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyTableDataAndPrintOnConsole()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyTableDataAndPrintOnConsole</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>21/03/29 09:17:32</td>   <td>-12191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">verifyUserRegistration</td> 
   <td>main@1664439369</td>   <td></td> </tr>
 </table>
